--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ nibabel==3.2.1
 numpy==1.21.3
 open3d==0.10.0.0
 scipy==1.7.1
-torch==1.8.1+cu111
+torch==1.8.1
 tqdm==4.62.3
 rich==12.5.1
+open3d==0.10.0
